update ip addressess:

--- a/roles/ifupdown-l2/templates/interfaces.j2
+++ b/roles/ifupdown-l2/templates/interfaces.j2
@@ -11,5 +11,6 @@ iface eth0 inet dhcp
 auto {{ interface }}
 iface {{ interface }} inet manual
    address {{ address }}
+   netmask 255.255.255.0
  
 {% endfor %}
