--- a/roles/ifupdown-l2/templates/interfaces.j2
+++ b/roles/ifupdown-l2/templates/interfaces.j2
@@ -9,8 +9,11 @@ iface eth0 inet dhcp
 
 {% for interface, address in nodes[ansible_hostname]["interfaces"]["physical"].items() %}
 auto {{ interface }}
-iface {{ interface }} inet static
-   address {{ address }}
-   netmask 255.255.255.0
+iface {{ interface }} inet manual
  
 {% endfor %}
+
+iface br0 inet static
+  bridge_ports {{ nodes[ansible_hostname]["interfaces"]["physical"].items() }}
+  address {{ nodes[ansible_hostname]["interfaces"]["bridge"]["ipv4"] }}
+  netmask 255.255.255.0
