update bridge ports

--- a/roles/ifupdown-l2/templates/interfaces.j2
+++ b/roles/ifupdown-l2/templates/interfaces.j2
@@ -14,6 +14,6 @@ iface {{ interface }} inet manual
 {% endfor %}
 
 iface br0 inet static
-  bridge_ports {{ nodes[ansible_hostname]["interfaces"]["physical"].items() }}
+  bridge_ports {% for interface in nodes[ansible_hostname]["interfaces"]["physical"] %}{{interface}} {% endfor %}
   address {{ nodes[ansible_hostname]["interfaces"]["bridge"]["ipv4"] }}
   netmask 255.255.255.0
